Fix site image width on mobile

--- a/assets/stylesheets/victor.css
+++ b/assets/stylesheets/victor.css
@@ -148,15 +148,7 @@ article {
     width: 60%;
 }
 
-article>p>img {
-    max-width: 50%;
-    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-article>img {
+article img {
     max-width: 100%;
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
     display: block;
